# FileBridge

./: .archiveignore  .gitignore  CHANGELOG.md  LICENSE  pom.xml  readme.md
dev/agent/config/: agent-config.sample.json
dev/desktop/: README.md  index.html  package-lock.json  package.json  tauri-build.cmd  vite.config.ts
dev/desktop/src-tauri/: Cargo.toml  tauri.conf.json
dev/desktop/src-tauri/capabilities/: default.json
dev/desktop/src-tauri/src/: main.rs
dev/desktop/src-tauri/windows/: nsis-service-hooks.nsh
docs/: README.md  archive-handoff.md  backend-architecture.md  ftp-error-mapping.md  implementation-playbook.md  install-and-use.md  license-activation.md  operations-runbook.md  productization-roadmap.md  project-layout.md  release-process.md  software-behavior-policy.md  transfer-plan-design.md  versioning.md  windows-trust.md
package/installer/: README.md
tools/: README.md
tools/scripts/: README.md  build-all.cmd  build-all.ps1  build-inno-installer.cmd  build-inno-installer.ps1  build-signed-installer.cmd  build-windows-installer.cmd  build-windows-installer.ps1  doctor.cmd  doctor.ps1  generate-dev-license.cmd  generate-dev-license.ps1  install-service.cmd  install-service.ps1  new-dev-code-signing-cert.cmd  new-dev-code-signing-cert.ps1  new-dev-license-keypair.cmd  new-dev-license-keypair.ps1  release-check.cmd  service-status.cmd  service-status.ps1  software-behavior-check.cmd  start-agent.cmd  start-agent.ps1  start-service.cmd  start-service.ps1  stop-service.cmd  stop-service.ps1  uninstall-service.cmd  uninstall-service.ps1
(+94 files in other folders)
